postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
     app: postgres
spec:
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: db
          image: postgres:12.0-alpine
         # command: ["createdb"]
         # args: ["-h","postgres", "-U", "admin", "storedb" ]
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: db
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-volume-claim
