api-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-deploy-service
spec:
  selector:
    app: my-app-deploy
  type: ClusterIP
#  clusterIP: 10.43.5.10
  ports:
   - name: http
     protocol: TCP
     port: 80
     targetPort: 80
