api-nodePort.yaml
# NodePort
apiVersion: v1
kind: Service
metadata:
   name: api-service-nodeport
spec:
   type: NodePort
   ports:
    - port: 80
      targetPort: 5000
      nodePort: 30005 # a choisr ou bien automatiquement
   selector:
       app: my-app-deploy
